--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,8 @@
 android-plugins = "8.7.2"
 kotest = "5.9.1"
 kotlin = "2.0.10"
+android-minSdk = "24"
+android-compileSdk = "34"
 
 [libraries]
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
@@ -31,6 +33,5 @@ dokka = "org.jetbrains.dokka:1.9.20"
 gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning-gradle-plugin:3.1.7"
 kotlin-qa = "org.danilopianini.gradle-kotlin-qa:0.65.2"
 multiJvmTesting = "org.danilopianini.multi-jvm-test-plugin:1.2.8"
-npm-publish = "dev.petuska.npm.publish:3.4.3"
 publishOnCentral = "org.danilopianini.publish-on-central:5.1.6"
 taskTree = "com.dorongold.task-tree:4.0.0"
