--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -38,11 +38,12 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
       - name: Compute next release version
         id: compute-next-version
         uses: nicolasfara/precompute-semantic-release-version-action@2.0.2
         with:
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.DEPLOYMENT_TOKEN }}
       - uses: DanySK/build-check-deploy-gradle-action@3.5.12
         with:
           maven-central-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
@@ -136,7 +137,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.2.2
         with:
-          token: ${{ secrets.DEPLOYMENT_TOKEN }}
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
       - name: Install Node
         uses: actions/setup-node@v4.1.0
         with:
