--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -4,10 +4,6 @@ on:
   workflow_call:
   workflow_dispatch:
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
-  cancel-in-progress: ${{ !contains(github.ref, 'master') }}
-
 jobs:
   check-secrets:
     runs-on: ubuntu-24.04
@@ -24,56 +20,43 @@ jobs:
         run: |
           echo "run-with-secrets=${{ steps.detect-secrets.outputs.has-secrets == 'true' && !github.event.repository.fork }}" >> $GITHUB_OUTPUT
 
-  staging-repo:
+  precompute-next-version:
     runs-on: ubuntu-24.04
-    needs:
-      - check-secrets
-    if: needs.check-secrets.outputs.run-with-secrets == 'true'
     outputs:
-      maven-central-repo-id: ${{ steps.staging-repo.outputs.MavenCentral }}
       next-version: ${{ steps.compute-next-version.outputs.next-version }}
-      will-release: ${{ steps.compute-next-version.outputs.will-release }}
     steps:
-      - name: Checkout the repo
+      - name: Checkout
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
       - name: Compute next release version
         id: compute-next-version
         uses: nicolasfara/precompute-semantic-release-version-action@2.0.2
         with:
-          github-token: ${{ secrets.DEPLOYMENT_TOKEN }}
-      - uses: DanySK/build-check-deploy-gradle-action@3.7.6
+          github-token: ${{ github.token }}
+
+  staging-repo:
+    runs-on: ubuntu-24.04
+    needs:
+      - check-secrets
+    if: ${{ needs.check-secrets.outputs.run-with-secrets == 'true' }}
+    outputs:
+      staging-repo-id: ${{ steps.create-staging-repo.outputs.staging-repo-id }}
+    steps:
+      - id: create-staging-repo
+        name: Create a staging repository
+        uses: danysk/action-create-ossrh-staging-repo@1.1.0
         with:
+          group-id: "org.danilopianini"
           maven-central-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          should-run-codecov: false
-          should-deploy: true
-          build-command: true
-          check-command: true
-          deploy-command: |
-            if [[ "${{ steps.compute-next-version.outputs.will-release }}" == "true" ]]; then
-              ./gradlew -PforceVersion="${{ steps.compute-next-version.outputs.next-version }}" createStagingRepositoryOnMavenCentral --parallel
-            else
-              ./gradlew createStagingRepositoryOnMavenCentral --parallel
-            fi
-      - name: Save staging repository ID
-        id: staging-repo
-        run: |
-          [[ -f build/staging-repo-ids.properties ]] || (
-            echo "Staging repositories ID file not found" &&
-            exit 1
-          )
-          REPO_IDS=$(cat build/staging-repo-ids.properties)
-          echo "Staging repositories IDs:\n$REPO_IDS"
-          echo $REPO_IDS >> $GITHUB_OUTPUT
 
   build:
     needs:
       - check-secrets
       - staging-repo
-    if: always() && !contains(needs.staging-repo.result, 'failure')
+      - precompute-next-version
+    if: always() && !(contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled'))
     strategy:
       fail-fast: false
       matrix:
@@ -81,44 +64,25 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: DanySK/action-checkout@0.2.22
-      - uses: DanySK/build-check-deploy-gradle-action@3.7.6
+        uses: actions/checkout@v4.2.2
         with:
+          fetch-depth: 0
+          fetch-tags: true
+      - uses: DanySK/build-check-deploy-gradle-action@3.7.6
+        id: staging-repo
+        with:
+          # Deploy from macOS since it supports all the platforms
+          should-deploy: ${{ runner.os == 'macos' && needs.check-secrets.outputs.run-with-secrets == 'true' }}
           deploy-command: |
-            # Stop gradle on windows
-            ruby -e 'if /^windows-\w+$/ =~ "${{ matrix.os }}" then puts `./gradlew --stop` end'
-            NEXT_VERSION="${{ needs.staging-repo.outputs.next-version }}"
+            NEXT_VERSION="${{ needs.precompute-next-version.outputs.next-version }}"
             OVERRIDE_VERSION=$([[ "$NEXT_VERSION" != "" ]] && echo "-PforceVersion=$(echo $NEXT_VERSION)" || echo "")
-            ./gradlew $OVERRIDE_VERSION -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} uploadAll --parallel
+            ./gradlew $OVERRIDE_VERSION -PstagingRepositoryId=${{ needs.staging-repo.outputs.staging-repo-id }} uploadAll close --parallel
           should-run-codecov: ${{ runner.os == 'Linux' }}
-          should-deploy: ${{ contains(needs.staging-repo.result, 'success') }}
+          codecov-token: ${{ secrets.CODECOV_TOKEN }}
           maven-central-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           signing-key: ${{ secrets.SIGNING_KEY }}
           signing-password: ${{ secrets.SIGNING_PASSWORD }}
-
-  close-staging-repos:
-    needs:
-      - staging-repo
-      - build
-    runs-on: ubuntu-24.04
-    if: needs.check-secrets.outputs.run-with-secrets == 'true'
-    steps:
-      - name: Checkout the repo
-        uses: actions/checkout@v4.2.2
-      - uses: DanySK/build-check-deploy-gradle-action@3.7.6
-        with:
-          maven-central-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-          maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          should-run-codecov: false
-          should-deploy: true
-          build-command: true
-          check-command: true
-          deploy-command: |
-            ./gradlew -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} close --parallel
-            if [[ "${{ needs.staging-repo.outputs.will-release }}" == "false" ]]; then
-              ./gradlew -PstagingRepositoryId=${{ needs.staging-repo.outputs.maven-central-repo-id }} dropStagingRepositoryOnMavenCentral
-            fi
 
   release:
     concurrency:
@@ -129,22 +93,22 @@ jobs:
     needs:
       - check-secrets
       - staging-repo
+      - precompute-next-version
       - build
-      - close-staging-repos
     runs-on: ubuntu-24.04
     if: needs.check-secrets.outputs.run-with-secrets == 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.2
         with:
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          token: ${{ secrets.DEPLOYMENT_TOKEN }}
       - name: Install Node
         uses: actions/setup-node@v4.1.0
         with:
           node-version-file: package.json
       - uses: DanySK/build-check-deploy-gradle-action@3.7.6
         env:
-          STAGING_REPO_ID: ${{ needs.staging-repo.outputs.maven-central-repo-id }}
+          STAGING_REPO_ID: ${{ needs.staging-repo.outputs.staging-repo-id }}
         with:
           retries-on-failure: '1'
           build-command: true
@@ -165,10 +129,9 @@ jobs:
     runs-on: ubuntu-24.04
     needs:
       - check-secrets
-      - staging-repo
-      - close-staging-repos
-      - release
+      - precompute-next-version
       - build
+      - release
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
@@ -181,20 +144,13 @@ jobs:
   drop-staging-repos:
     needs:
       - staging-repo
-      - success
+      - release
     runs-on: ubuntu-24.04
-    if: always()
+    if: always() && !(contains(needs.staging-repo.result, 'failure') || contains(needs.staging-repo.result, 'cancelled'))
     steps:
-      - env:
-          MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-          MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-        run: >
-          curl
-          --request POST
-          --url "https://s01.oss.sonatype.org/service/local/staging/bulk/drop"
-          --header "Accept: application/json"
-          --header "Content-Type: application/json"
-          --data '{"data":{"stagedRepositoryIds":["${{ needs.staging-repo.outputs.maven-central-repo-id }}"]}}'
-          --user "$MAVEN_CENTRAL_USERNAME:$MAVEN_CENTRAL_PASSWORD"
-          --verbose
-
+      - name: Drop staging repository
+        uses: danysk/action-drop-ossrh-staging-repo@1.0.3
+        with:
+          repo-id: ${{ needs.staging-repo.outputs.staging-repo-id }}
+          maven-central-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+          maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
